--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
-    <title>Plataformas de desarrollo - Parcial 2</title>
+    <title>Plataformas de desarrollo - Final </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
